# synxis-crs-mcp

./: .gitignore  CLAUDE.md  RULES.md  pyproject.toml
.oneiric_cache/: runtime_health.json  runtime_telemetry.json  workflow_checkpoints.sqlite
settings/: synxis-crs.yaml
synxis_crs_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  server.py
synxis_crs_mcp/tools/: __init__.py  crs_tools.py
tests/: __init__.py  conftest.py  test_schema_validation.py
