[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synxis-crs-mcp"
version = "0.1.1"
description = "Unofficial MCP server for SynXis CRS (Central Reservation System) API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp-common>=0.4.8",
    "oneiric>=0.3.6",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
synxis-crs-mcp = "synxis_crs_mcp.cli:main"

[tool.synxis-crs-mcp]
http_port = 3046
http_host = "127.0.0.1"
enable_http_transport = false

[dependency-groups]
dev = [
    "crackerjack>=0.50.1",
    "session-buddy>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
    "bandit>=1.8.0",
    "creosote>=3.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["tests/", "test_*.py", "*_test.py"]

[tool.ruff.lint]
extend-select = ["C901", "F", "I", "UP"]
ignore = ["E402", "F821"]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
testpaths = ["tests"]
addopts = [
    "--cov=synxis_crs_mcp",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (>2s)",
    "mock: Tests using mock mode",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["synxis_crs_mcp"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.bandit]
target = ["synxis_crs_mcp"]
skips = ["B101", "B110", "B112", "B404", "B603", "B607"]
exclude_dirs = ["tests/"]
